--- a/.github/workflows/surge_deploy_reactjs.yaml
+++ b/.github/workflows/surge_deploy_reactjs.yaml
@@ -24,6 +24,6 @@ jobs:
         run: npm install -g surge
         
       - name: Run surge
-        run: surge ./build blockchaindevbywaqas.surge.sh --token ${{ secrets.SURGE_TOKEN_SECRET2 }}
+        run: surge ./build reactjs-litdark-demo.surge.sh --token ${{ secrets.SURGE_TOKEN_SECRET2 }}
 
           
